--- a/presupuesto_airovac/reports/presupuesto.xml
+++ b/presupuesto_airovac/reports/presupuesto.xml
@@ -257,5 +257,12 @@
         </t>
     </template>
 
+     <template id="css_ventas" name="Estilos" inherit_id="ventas_presupuesto">
+      <xpath expr="." position="inside">
+        <link  href="/presupuesto_airovac/static/src/css/cotizacion.css" rel='stylesheet' type="text/css"/>
+      </xpath>
+    </template>
+
+
 </data>
 </odoo>
