--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -5,7 +5,7 @@
             id="ventas_presupuesto"
             model="sale.order"
             string="(en desarrollo)"
-            report_type="qweb-html"
+            report_type="qweb-pdf"
             name="presupuesto_airovac.report_ventas_presupuesto"
             file="presupuesto_airovac.report_ventas_presupuesto"
             print_report_name="'Cotización - %s' % (object.name)"
