--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -41,11 +41,11 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <div class = "page">
-                            <link rel="stylesheet" href="https://airovac.odoo.com/presupuesto_airovac/static/src/css/cotizacion.css"/>
+                            <link rel="stylesheet" href="/presupuesto_airovac/static/src/css/cotizacion.css"/>
                     <div class="head-presupuesto">
                         <div class="row" >
                             <div class="col-4">
-                                <img class="img img-responsive" alt="Logo"  t-att-src="'https://airovac.odoo.com/presupuesto_airovac/static/src/img/logo_grande_png.png'"/>
+                                <img  style="max-height: 45px;" src="/presupuesto_airovac/static/src/img/logo-grande.png" />
                             </div>
                             <div class="col-2">
                             </div>
