--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -278,7 +278,7 @@
                     </div>
 
                     <div class="footer o_standard_footer o_company_1_layout">
-                        <div class="text-center" style="border-top: 1px solid black; font-size: 13px;">
+                        <div class="text-center example-css-class" style="border-top: 1px solid black; font-size: 13px;">
                            <span>  AiroVAC</span>
                            <span> Proyectos en Ventilación, Agua y Control<br/></span>
                            <span> Tel. Mty (81) 8333 7738, D.F. (55) 5005 9893, Gdl (33) 8995 7135, Mer (999) 801 1300, Pue (222) 644 0560<br/>
