--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -45,7 +45,7 @@
                     <link href="/presupuesto_airovac/static/src/css/cotizacion.css" rel="stylesheet"/>
                    <body>
                       <div class="rectangulo col-12">
-                          <img width="100px" height="100px" src="/presupuesto_airovac/static/src/img/logo-grande.png"/>
+                          <img class="img img-responsive" src="/presupuesto_airovac/static/src/img/logo-grande.png"/>
 
                         Hola
                       </div>
