--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -45,7 +45,7 @@
                     <link href="/presupuesto_airovac/static/src/css/cotizacion.css" rel="stylesheet"/>
                    <body>
                       <div class="rectangulo col-12" style="background-color: red;">
-
+                           <span  src="/presupuesto_airovac/static/src/img/logo-grande.png" t-field-options="{'widget': 'image'}" />
                         Hola
                       </div>
                     </body>
@@ -55,11 +55,6 @@
         </t>
     </template>
 
-    <template id="report_footer_custom" inherit_id="presupuesto_airovac.report_ventas_presupuesto">
-    <xpath expr="//div[@class='rectangulo']" position="inside">
-            <img class="img img-responsive" src="/presupuesto_airovac/static/src/img/logo-grande.png"/>
-    </xpath>
-   </template>
 
 
 
