--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -42,16 +42,16 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <div class="page">
-                    <link href="/presupuesto_airovac/static/src/css/cotizacion.css" rel="stylesheet"/>
+                    <link href="'/presupuesto_airovac/static/src/css/cotizacion.css'" rel="stylesheet"/>
                     <body >
 
                         <div   >
 
                             <div class="header o_company_1_layout">
-                                <div class="row" style="background-color: red;">
+                                <div class="row" >
                                     <div class="col-3 mb4">
 <!--                                        <img style="max-height: 45px;" alt="Logo" src='/web/binary/company_logo'/>-->
-                                        <img  alt="Logo" t-att-src="'/presupuesto_airovac/static/src/img/logog.png'" style="max-height: 45px;"/>
+                                        <img  alt="Logo" t-att-src="'/presupuesto_airovac/static/src/img/logog.png'" class="rectangulo"/>
 
                                     </div>
 
