--- a/presupuesto_airovac/static/src/css/style.scss
+++ b/presupuesto_airovac/static/src/css/style.scss
@@ -1,4 +1,4 @@
 .titles-info {
-        font-size: 20px !important;
-        font-weight: bold !important;
+        max-height: 45px;
+        background-color: red;
      }
