--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -68,7 +68,7 @@
 <!--                                        <img style="max-height: 45px;" alt="Logo" src='/web/binary/company_logo'/>-->
 
                                     </div><!-- DIV 2 MEDIO-->
-                                    <div class="col-5" style="background-color: red !important;">
+                                    <div class="col-5 text-right" style="font-family: verdana !important;font-weight: normal !important; font-size: 24px;!important">
                                         <div>
                                             <address class="mb-0" itemscope="itemscope" >
                                                 <div>
@@ -160,14 +160,16 @@
 
                                 <!--Tabla-->
                                 <table class="table table-sm o_main_table">
-                                    <thead>
+                                    <thead style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important">
                                         <tr>
-                                            <th width="10%" name="th_partida" class="text-center" style="vertical-align:middle">Partida</th>
-                                            <th width="40%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
-                                            <th width="10%" name="th_quantity" class="text-center" style="vertical-align:middle">Cantidad</th>
-                                            <th width="12%" name="th_priceunit" class="text-center" style="vertical-align:middle">Precio unitario</th>
-                                            <th width="16%" name="th_e_t_e" class="text-center" style="vertical-align:middle">T.E</th>
-                                            <th width="12%" name="th_subtotal" class="text-center" style="vertical-align:middle">Subtotal  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t></th>
+                                            <th width="16%" name="th_partida" class="text-center" style="vertical-align:middle">Partida</th>
+                                            <th width="30%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
+                                            <th width="10%" name="th_etiqueta_a" class="text-center" style="vertical-align:middle"><span  t-field="doc.e_etiqueta_title_a" /></th>
+                                            <th width="10%" name="th_etiqueta_b" class="text-center" style="vertical-align:middle"><span  t-field="doc.e_etiqueta_title_b" /></th>
+                                            <th width="8%" name="th_quantity" class="text-center" style="vertical-align:middle">Cantidad</th>
+                                            <th width="8%" name="th_priceunit" class="text-center" style="vertical-align:middle">Precio unitario</th>
+                                            <th width="8%" name="th_subtotal" class="text-center" style="vertical-align:middle">Subtotal  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t></th>
+                                            <th width="10%" name="th_e_t_e" class="text-center" style="vertical-align:middle">T.E</th>
                                         </tr>
                                     </thead>
 
@@ -176,33 +178,45 @@
                                         <t t-foreach="doc.order_line" t-as="line">
                                             <t t-if = "line.display_type == False" >
                                                 <tr class="">
-                                                    <td name="td_partida">
-                                                        <span style="font-size: 15px" t-field="line.e_partida"></span>
+                                                    <td name="td_partida" class="text-center">
+                                                        <div class="row text-center" >
+                                                            <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px;!important" t-field="line.e_partida"></span>
+                                                        </div>
+                                                        <div class="row">
+                                                            <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)"/>
+                                                        </div>
 
                                                     </td>
-                                                    <td name="td_name">
-                                                        <strong><span style="font-size: 15px" t-field="line.product_template_id.default_code"></span></strong><br/>
+                                                    <td name="th_description">
+                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px;!important" t-field="line.product_template_id.default_code"></span></strong><br/>
                                                         <t t-if = "line.product_template_id.description_sale != False" >
 
-                                                            <span style="font-size: 13px" t-field="line.product_template_id.description_sale"></span>
+                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9px;!important" t-field="line.product_template_id.description_sale"></span>
                                                         </t>
                                                         <t t-if = "line.product_template_id.description_sale == False" >
-                                                            <span style="font-size: 13px" t-field="line.product_template_id.name"></span>
+                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9px;!important" t-field="line.product_template_id.name"></span>
                                                         </t>
 
                                                     </td>
+                                                    <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle">
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important"  t-field="line.e_etiqueta_line_a"></span>
+                                                    </td>
+                                                    <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle">
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" t-field="line.e_etiqueta_line_b"></span>
+                                                    </td>
                                                     <td name="td_quantity" class="text-center" style="vertical-align:middle">
-                                                        <span t-field="line.product_uom_qty"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important"  t-field="line.product_uom_qty"></span>
                                                     </td>
                                                     <td name="td_priceunit" class="text-center" style="vertical-align:middle">
-                                                        <span t-field="line.price_unit"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" t-field="line.price_unit"></span>
+                                                    </td>
+                                                     <td name="td_subtotal" class="text-center o_price_total" style="vertical-align:middle">
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" class="oe_currency_value" t-field="line.price_subtotal"></span>
                                                     </td>
                                                     <td name="td_e_t_e" class="text-center" style="vertical-align:middle">
-                                                        <span t-field="line.e_t_e"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" t-field="line.e_t_e"></span>
                                                     </td>
-                                                    <td name="td_subtotal" class="text-center o_price_total" style="vertical-align:middle">
-                                                        <span class="oe_currency_value" t-field="line.price_subtotal"></span>
-                                                    </td>
+
                                                 </tr>
                                             </t>
                                             <t t-if = "line.display_type != False" >
