--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -60,14 +60,15 @@
                                 <div class="row" style="height: 105px !important;">
                                     <div class="col-5 text-center" style="background-color: pink !important;" >
 <!--                                        <img style="max-height: 45px;" alt="Logo" src='/web/binary/company_logo'/>-->
-                                        <img  alt="Logo" t-att-src="'/presupuesto_airovac/static/src/img/logog.png'"/>
+                                        <img  alt="Logo" t-att-src="'/presupuesto_airovac/static/src/img/logog.png'"
+                                                class="img-fluid" style="vertical-align:middle !important;"/>
 
                                     </div><!-- DIV 2 IZQUIERDO-->
                                     <div class="col-2" style="background-color: blue !important;">
 <!--                                        <img style="max-height: 45px;" alt="Logo" src='/web/binary/company_logo'/>-->
 
                                     </div><!-- DIV 2 MEDIO-->
-                                    <div class="col-5" style="background-color: pink !important; font-family: verdana !important;font-weight: normal !important; font-size: 24px;!important">
+                                    <div class="col-5" style="background-color: pink !important; font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;">
                                         <div>
                                             <address class="text-right" itemscope="itemscope">
                                                 <div>
@@ -78,8 +79,8 @@
                                                             <p  class="text-right">
                                                                 <t t-esc ="doc.company_id.street_name" />
                                                                 <t t-esc ="doc.company_id.street_number" />
-                                                                <t t-esc ="doc.company_id.street_number2" />
-                                                                <t t-esc ="doc.company_id.zip" />
+                                                                <t t-esc ="doc.company_id.street_number2" /><br/>
+                                                                CP <t t-esc ="doc.company_id.zip" />
                                                                 <t t-esc ="doc.company_id.city" />,
                                                                 <t t-esc ="doc.company_id.state_id.code" />
                                                                 <t t-sec ="doc.company_id.country_id"></t>
@@ -96,8 +97,13 @@
                             <div class="article o_report_layout_standard o_company_1_layout" data-oe-model="sale.order" data-oe-id="18" data-oe-lang="es_ES">
                                 <div class="address row">
                                     <div  class="col-6">
+                                        <div class="oe_structure"></div>
+                                        <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 18px;!important">
+                                            <span>Cotización # </span>
+                                            <span t-field="doc.name"></span>
+                                        </h2>
                                     </div>
-                                    <div name="address" class="col-5">
+                                    <div name="address" class="col-6">
                                         <div>
                                             <address class="mb-0" itemscope="itemscope" >
                                                 <div>
@@ -130,21 +136,16 @@
                                     </div>
                                 </div>
 
-                                <div class="oe_structure"></div>
-                                <h2 class="mt16">
-                                    <span>Cotización # </span>
-                                    <span t-field="doc.name"></span>
-                                </h2>
                                 <div class="row mt32 mb32" id="informations">
                                     <div class="col-auto mw-100 mb-2">
-                                        <strong>Fecha de cotización:</strong>
-                                        <p class="m-0">
+                                        <span style="font-family: verdana !important;font-weight: bold !important; font-size: 11px;!important" >Fecha de cotización:</span>
+                                        <p class="m-0" style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" >
                                             <span t-field="doc.date_order" t-options='{"format": "dd/MM/yyyy"}'  ></span>
                                         </p>
                                     </div>
                                     <div class="col-auto mw-100 mb-2">
-                                        <strong>Fecha de expiración:</strong>
-                                        <p class="m-0">
+                                        <span style="font-family: verdana !important;font-weight: bold !important; font-size: 11px;!important" >Fecha de expiración:</span>
+                                        <p class="m-0" style="font-family: verdana !important;font-weight: normal !important; font-size: 1opx;!important">
                                             <span t-field="doc.validity_date"   ></span>
                                         </p>
                                     </div>
@@ -156,7 +157,7 @@
 
                                 <!--Tabla-->
                                 <table class="table table-sm o_main_table">
-                                    <thead style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important">
+                                    <thead style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;">
                                         <tr>
                                             <th width="16%" name="th_partida" class="text-center" style="vertical-align:middle">Partida</th>
                                             <th width="30%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
@@ -176,7 +177,7 @@
                                                 <tr class="">
                                                     <td name="td_partida" class="text-center">
                                                         <div class="row text-center" >
-                                                            <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px;!important" t-field="line.e_partida"></span>
+                                                            <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;" t-field="line.e_partida"></span>
                                                         </div>
                                                         <div class="row">
                                                             <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)"/>
@@ -184,7 +185,7 @@
 
                                                     </td>
                                                     <td name="th_description">
-                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px;!important" t-field="line.product_template_id.default_code"></span></strong><br/>
+                                                        <strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;" t-field="line.product_template_id.default_code"></span></strong><br/>
                                                         <t t-if = "line.product_template_id.description_sale != False" >
 
                                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 9px;!important" t-field="line.product_template_id.description_sale"></span>
@@ -195,22 +196,22 @@
 
                                                     </td>
                                                     <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important"  t-field="line.e_etiqueta_line_a"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;"  t-field="line.e_etiqueta_line_a"></span>
                                                     </td>
                                                     <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" t-field="line.e_etiqueta_line_b"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" t-field="line.e_etiqueta_line_b"></span>
                                                     </td>
                                                     <td name="td_quantity" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important"  t-field="line.product_uom_qty"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;"  t-field="line.product_uom_qty"></span>
                                                     </td>
                                                     <td name="td_priceunit" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" t-field="line.price_unit"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" t-field="line.price_unit"></span>
                                                     </td>
                                                      <td name="td_subtotal" class="text-center o_price_total" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" class="oe_currency_value" t-field="line.price_subtotal"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" class="oe_currency_value" t-field="line.price_subtotal"></span>
                                                     </td>
                                                     <td name="td_e_t_e" class="text-center" style="vertical-align:middle">
-                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px;!important" t-field="line.e_t_e"></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" t-field="line.e_t_e"></span>
                                                     </td>
 
                                                 </tr>
@@ -243,13 +244,13 @@
                                         <div class="col-4">
                                             <table class="table table-sm">
                                                 <tbody><tr class="border-black o_subtotal" style="">
-                                                    <td name="td_amount_untaxed_label"><strong>Subtotal <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </strong></td>
+                                                    <td name="td_amount_untaxed_label"><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;">Subtotal <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </span></td>
                                                     <td name="td_amount_untaxed" class="text-right">
-                                                        <span><span class="oe_currency_value" t-field="doc.amount_untaxed"></span></span>
+                                                        <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" ><span class="oe_currency_value" t-field="doc.amount_untaxed"></span></span>
                                                     </td>
                                                 </tr>
 
-                                                    <tr style="">
+                                                    <tr class="border-black o_total" style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;">
 
                                                         <td name="td_amount_by_group_label">
                                                             <span>IVA 16% </span>
@@ -261,9 +262,9 @@
                                                     </tr>
 
                                                     <tr class="border-black o_total">
-                                                        <td name="td_amount_total_label"><strong>Total  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </strong></td>
+                                                        <td name="td_amount_total_label"><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10px !important;">Total  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </span></td>
                                                         <td name="td_amount_total" class="text-right">
-                                                            <span><span class="oe_currency_value" t-field="doc.amount_total"></span></span>
+                                                            <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10px !important;" ><span class="oe_currency_value" t-field="doc.amount_total"></span></span>
                                                         </td>
                                                     </tr>
                                                 </tbody>
